tools/flowc/tests/nim/test_hostcall.flow

native hostCall : io (name: string, args: [flow]) -> flow = Native.hostCall;
native quit : io (code : int) -> void = Native.quit;
native println2 : io (flow) -> void = Native.println;

main() {
	// res = hostCall("concat", [[1, 2], [3, 4]]); // error: wrong cast : result [1, 3]
	res = hostCall("concat", [[1], [4]]); // error: wrong cast : result [true, true]
	println2(res);
	hostCall("println2", ["flow9"]);
	println2("end"); // error: dce
	quit(0);
}